--- a/phscale.html
+++ b/phscale.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<link rel="stylesheet" href="css/ph.css">
 		<title>Color</title>
 	</head>
 	<body>
-		<h1>pH Scale</h1>
-		<p class="fourteen">14.0 VERY ALKALINE</p>
-		<p class="thirteen">13.0</p>
-		<p class="twelve">12.0</p>
-		<p class="eleven">11.0</p>
-		<p class="ten">10.0</p>
-		<p class="nine">9.0</p>
-		<p class="eight">8.0</p>
-		<p class="seven">7.0 NEUTRAL</p>
-		<p class="six">6.0</p>
-		<p class="five">5.0</p>
-		<p class="four">4.0</p>
-		<p class="three">3.0</p>
-		<p class="two">2.0</p>
-		<p class="one">1.0</p>
-		<p class="zero">0.0 VERY ACID</p>
+	
+	<table border=10, width=100%>
+		<tr><td style="height:20px; background-color:#bfbfbf;"></td></tr>
+		<tr><td class="ph"><h1>pH Scale</h1></td></tr>
+		<tr><td style="height:15px; background-color:#bfbfbf;"></td></tr>
+		<tr><td class="fourteen"><p class="fourteen">14.0 VERY ALKALINE</p></td></tr>
+		<tr><td class="thirteen"><p class="thirteen">13.0</p></td></tr>
+		<tr><td class="twelve"><p class="twelve">12.0</p></td></tr>
+		<tr><td class="eleven"><p class="eleven">11.0</p></td></tr>
+		<tr><td class="ten"><p class="ten">10.0</p></td></tr>
+		<tr><td class="nine"><p class="nine">9.0</p></td></tr>
+		<tr><td class="eight"><p class="eight">8.0</p></td></tr>
+		<tr><td class="seven"><p class="seven">7.0 NEUTRAL</p></td></tr>
+		<tr><td class="six"><p class="six">6.0</p></td></tr>
+		<tr><td class="five"><p class="five">5.0</p></td></tr>
+		<tr><td class="four"><p class="four">4.0</p></td></tr>
+		<tr><td class="three"><p class="three">3.0</p></td></tr>
+		<tr><td class="two"><p class="two">2.0</p></td></tr>
+		<tr><td class="one"><p class="one">1.0</p></td></tr>
+		<tr><td class="zero"><p class="zero">0.0 VERY ACID</p></td></tr>
+		<tr><td style="height:50px; background-color:#bfbfbf;"></td></tr>
+		</table>
 	</body>
 </html>
